--- a/navigation/hamburger.css
+++ b/navigation/hamburger.css
@@ -13,14 +13,19 @@ nav,
 
 header {
     position: relative;
+    background: #525151;
+    color: #fff;
+    padding: 10px;
+    font-size: 1.5rem;
 }
 
 nav {
     position: absolute;
-    background: rgb(82, 81, 81);
-    top: 0;
-    left: 30px;
+    background: #525151;
+    left: 0px;
+    font-size: 1rem;
 }
+
 nav a {
     display: block;
     flex-direction: column;
@@ -32,9 +37,14 @@ nav a {
 @media (min-width: 600px) {
     nav {
         display: block;
+        position: static;
     }
 
     .h-menu {
         display: none;
+    }
+
+    nav a {
+        display: inline-block;
     }
 }
