--- a/contact-form/contact.css
+++ b/contact-form/contact.css
@@ -9,3 +9,12 @@ body {
     background: #222;
     color: #fff;
 }
+
+header {
+    display: flex;
+    align-items: center;
+}
+
+nav li {
+    display: inline;
+}
