--- a/4-elements.css
+++ b/4-elements.css
@@ -14,6 +14,7 @@ header {
     background: #000;
     display: flex;
     align-items: center;
+    padding: 5px 0;
 }
 
 .logo {
@@ -44,9 +45,11 @@ nav li a:hover {
     padding: 5px;
     color: #000;
     border-radius: 5px;
-}
+} 
 
-hr {
-    width: 95%;
-    margin: auto;
+
+/*Welcome*/
+#welcome {
+    background: url(https://jasonlouro.ghost.io/content/images/2023/03/Types-of-Nature-Magic.webp) center center no-repeat;
+    background-size: cover;
 }
