--- a/4-elements.css
+++ b/4-elements.css
@@ -151,6 +151,19 @@ main {
     right: 220px;
 }
 
+.avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+}
+
+video {
+    margin: 30px 0;
+    border: 5px solid #bdbcbc;
+    border-radius: 20px;
+}
+
 
 @media (max-width: 600px) {
 
@@ -198,6 +211,7 @@ main {
     /* Content */
     .em-container {
         position: relative;
+        padding-bottom: 0px;
     }
 
     .elements {
@@ -227,5 +241,9 @@ main {
     .wind h2 {
         top: 595px;
         left: 220px;
+    }
+
+    video {
+        width: 90%;
     }
 }
